feat(answer voting) Add backend code
