# SuperAnswersAngular/src/data-services/models/add-answer-vote-request.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface AddAnswerVoteRequest {
+  questionAnswerId?: string;
+  userId?: string;
+}
