# SuperAnswersAngular/src/data-services/models/add-answer-vote-response.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+import { Response } from './response';
+export interface AddAnswerVoteResponse extends Response {
+  id?: string;
+}
