# SuperAnswersAngular/src/data-services/models/add-question-tag-request.ts
@@ -1,9 +1,5 @@
 /* tslint:disable */
 export interface AddQuestionTagRequest {
   title?: string;
-  createdAt: string;
-  createdBy?: string;
-  updatedAt: string;
-  updatedBy?: string;
   userId?: string;
 }
