# SuperAnswersAngular/src/data-services/models/edit-question-answer-request.ts
@@ -3,10 +3,6 @@ export interface EditQuestionAnswerRequest {
   id?: string;
   questionId?: string;
   answer?: string;
-  createdAt: string;
-  createdBy?: string;
-  updatedAt: string;
-  updatedBy?: string;
   votes: number;
   userId?: string;
 }
